--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <main class="main">
         <div class="main-container">
           <section class="map">
-            <!-- <iframe width='100%' height='600px' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe> -->
+            <iframe width='100%' height='600px' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe>
           </section>
           <section class="intro">
             <div class="intro-heading">
