maps and armenia chart

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <main class="main">
         <div class="main-container">
           <section class="map">
-            <!-- <iframe width='100%' height='600px' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe> -->
+            <iframe width='100%' height='600px' src="https://api.mapbox.com/styles/v1/rasscrom/clssj4t6u00aa01pk31m92ood.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#7.24/40.005/45.701" title="armenia-main" style="border:none;"></iframe>
           </section>
           <section class="intro">
             <div class="intro-heading">
@@ -173,7 +173,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
         <div class="main-container">
           <section class="solar">
             <div class="solar-heading">
-              <h3 class="solar-heading__subhead">Chapter 3<span>.</span></h3>
+              <h3 class="solar-heading__subhead">Chapter 5<span>.</span></h3>
               <h1 class="solar-heading__head">Solar energy</h1>
             </div>
             <div class="solar-info">
@@ -183,7 +183,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
                 </br></br>Wide implementation of solar PV systems is currently in progress. As of 1 July 2022, around 102.8 MW of solar PV installations (of up to 5 MW each) were in operation. Another batch of grid-connected PV power plants totalling 176.7 MW are under construction, the largest being the Masrik solar PV station with 6255 MW of installed capacity in Gegharkunik Region.
               </p>
               <div class="solar-map">
-                <iframe width='100%' height='100%' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe>
+                <iframe width='100%' height='60%' src="https://api.mapbox.com/styles/v1/rasscrom/clsskjnfk00zp01pf1smd0zrn.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.95/40.099/45.814" title="armenia-solar" style="border:none;"></iframe>
               </div>
             </div>
           </section>
@@ -195,7 +195,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
           
           <section class="wind">
             <div class="wind-heading">
-              <h3 class="wind-heading__subhead">Chapter 4<span>.</span></h3>
+              <h3 class="wind-heading__subhead">Chapter 6<span>.</span></h3>
               <h1 class="wind-heading__head">Wind energy</h1>
             </div>
             <div class="wind-info">
@@ -214,7 +214,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
 
               </p>
               <div class="wind-map">
-                <iframe width='100%' height='100%' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe>
+                <iframe width='100%' height='60%' src="https://api.mapbox.com/styles/v1/rasscrom/clssk0iqk004b01p9eijd3r7d.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#7.37/40.154/45.667" title="armenia-wind" style="border:none;"></iframe>
               </div>
             </div>
           </section>
@@ -226,7 +226,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
 
           <section class="hydro">
             <div class="hydro-heading">
-              <h3 class="hydro-heading__subhead">Chapter 5<span>.</span></h3>
+              <h3 class="hydro-heading__subhead">Chapter 7<span>.</span></h3>
               <h1 class="hydro-heading__head">Hydro energy</h1>
             </div>
             <div class="hydro-info">
@@ -241,13 +241,13 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
               </br></br>
                 It is foreseen the construction of the following HPPs:
                 <ul>
-                  <li  style="list-style-type:circle">Meghri HPP (about 100 MW capacity) on Araks River</li>
-                  <li  style="list-style-type:circle">Shnogh HPP (about 75 MW capacity) on Debet River</li>
+                  <li class="hydro-text__li" style="list-style-type:circle">Meghri HPP (about 100 MW capacity) on Araks River</li>
+                  <li class="hydro-text__li" style="list-style-type:circle">Shnogh HPP (about 75 MW capacity) on Debet River</li>
                 </ul>
                 
               </span>
               <div class="hydro-map">
-                <iframe width='100%' height='100%' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe>
+                <iframe width='100%' height='60%' src="https://api.mapbox.com/styles/v1/rasscrom/clsd5c99z00xu01ql0z5dfa8v.html?title=false&access_token=pk.eyJ1IjoicmFzc2Nyb20iLCJhIjoiY2wyNzlrcDY2MGk5cDNqcW5wZW9mZW5kciJ9.zdI6zJ4KbGx-V8mq1KoUCg&zoomwheel=false#6.48/40.244/46.201" title="armenia_energy" style="border:none;"></iframe>
               </div>
             </div>
           </section>
@@ -263,9 +263,22 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
         <div class="footer-container">
           <div class="footer-author">
             The project was worked on by
+            <h3 class="footer-author__head">Tolegen Akinzhanov</h3>
+            <p class="footer-author__desc">data collection, text editor, data engineering</p>
+            <h3 class="footer-author__head">Artem Kushlevich</h3>
+            <p class="footer-author__desc">infographic editor, text editor, map design</p>
+            <h3 class="footer-author__head">Alikhan Beisenbayev</h3>
+            <p class="footer-author__desc">developer, web map creator, web design</p>
           </div>
-          <div class="footer-sources">
+          <div class="footer-source">
             Sources
+            <ol class="footer-source__list">
+              <li>4</li>
+              <li>2</li>
+              <li>3</li>
+              <li>2</li>
+              <li>4</li>
+            </ol>
           </div>
         </div>
       </footer>
