--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv='cache-control' content='no-cache'> 
     <meta http-equiv='expires' content='0'> 
     <meta http-equiv='pragma' content='no-cache'>
+    <meta http-equiv="Permissions-Policy" content="...">
 
     <link rel="icon" type="image/svg+xml" href="./assets/img/armenia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
