--- a/index.html
+++ b/index.html
@@ -92,16 +92,16 @@
               <h3 class="issue-heading__subhead">Chapter 1<span>.</span></h3>
               <h1 class="issue-heading__head">Problems</h1>
             </div>
-            <div class="issue-text"  data-aos="fade-up">
-              <span class="text-highlight">Dependency on Imports</span>: Armenia is heavily dependent on imported natural gas and oil for its energy needs, making it vulnerable to geopolitical tensions and price fluctuations in global energy markets.
-            </br></br>
-              <span class="text-highlight">Aging Infrastructure</span>: Armenia's energy infrastructure, including power plants and distribution networks, has suffered from outdated technology and aging equipment. This has resulted in decreased energy production efficiency and increased maintenance costs.
-            </br></br>
-              <span class="text-highlight">Limited Energy Resources</span>: Armenia has faced challenges in terms of domestic energy resources. The country lacks significant fossil fuel reserves, and its renewable energy potential has not been fully exploited.
-            </br></br>
-              <span class="text-highlight">Energy Security Concerns</span>: Armenia faced challenges in ensuring stable energy supplies due to its geopolitical situation. Political tensions in the region have the potential to disrupt the flow of energy resources, which could impact the country's energy security.
-            </br></br>
-              <span class="text-highlight">High Energy Dependency on Thermal Power Plants</span>: Armenia's electricity generation was heavily reliant on thermal power plants, specifically those that use natural gas. This dependence made the energy sector vulnerable to fluctuations in gas prices and supply disruptions.
+            <div class="issue-text">
+              <p data-aos="fade-up"><span class="text-highlight">Dependency on Imports</span>: Armenia is heavily dependent on imported natural gas and oil for its energy needs, making it vulnerable to geopolitical tensions and price fluctuations in global energy markets.</p>
+            </br>
+              <p data-aos="fade-up"><span class="text-highlight" >Aging Infrastructure</span>: Armenia's energy infrastructure, including power plants and distribution networks, has suffered from outdated technology and aging equipment. This has resulted in decreased energy production efficiency and increased maintenance costs.</p>
+            </br>
+              <p data-aos="fade-up"><span class="text-highlight">Limited Energy Resources</span>: Armenia has faced challenges in terms of domestic energy resources. The country lacks significant fossil fuel reserves, and its renewable energy potential has not been fully exploited.</p>
+            </br>
+              <p data-aos="fade-up"><span class="text-highlight">Energy Security Concerns</span>: Armenia faced challenges in ensuring stable energy supplies due to its geopolitical situation. Political tensions in the region have the potential to disrupt the flow of energy resources, which could impact the country's energy security.</p>
+            </br>
+              <p data-aos="fade-up"><span class="text-highlight">High Energy Dependency on Thermal Power Plants</span>: Armenia's electricity generation was heavily reliant on thermal power plants, specifically those that use natural gas. This dependence made the energy sector vulnerable to fluctuations in gas prices and supply disruptions.</p>
 
             </div>
           </section>
@@ -171,6 +171,8 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
             </br></br>
               In accordance with the terms of reference, the capacity of the APP (the first stage of construction) included VVER-440 type reactors with a total capacity of 815.0 MW (2x407.5 MW). The design life of the NPP was set at 30 years, as at all other nuclear power plants with this type of reactor.
             </br></br>
+            <img class="nuclear-img" src="./assets/img/Metsamor_NPP_armenia2.png" alt="Metsamor nuclear power plant" srcset="">
+          </br></br>
               The first power unit of the Armenian NPP was put into operation on December 22, 1976, and the second on January 5, 1980.
             </br></br>
               In 1983, after the approval of the project of the second stage of the NPP (two VVER-440 power units, type B-213), construction work began on the construction of the third and fourth power units, however, after the accident at the Chernobyl nuclear power plant in 1986, all construction work was curtailed.
@@ -200,8 +202,8 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
               <h3 class="solar-heading__subhead">Chapter 5<span>.</span></h3>
               <h1 class="solar-heading__head">Solar energy</h1>
             </div>
-            <div class="solar-info"  data-aos="fade-up">
-              <p class="solar-text">
+            <div class="solar-info">
+              <p class="solar-text"  data-aos="fade-up">
                 Armenia has a significant solar energy potential. The average annual amount of solar energy flow per m2 of horizontal surface is about 1,720 kWh, compared with the average European figure of 1,000 kWh. One fourth of the country’s territory is endowed with solar energy resources of 1,850 kWh/m2 per year.
                 </br></br>Armenia's solar power plants are not distinguished by their high capacity and size. They are mostly not connected to the general network and are installed on the roofs of houses, both private and public (Armenian American Wellness Centre, UN office in Spitak and others). According to a Armenian Energy Agency, More than 6940 autonomous electricity producers with 136.1 MW of total installed capacity are connected to the distribution grid, an additional 518 plants with 11 MW total capacity are in the process of connection. Individuals and businesses can install up to 150 kW and 500 kW solar power stations, produce electricity for internal consumption, and sell the surplus to the "Electric Networks of Armenia".
                 </br></br>Wide implementation of solar PV systems is currently in progress. As of 1 July 2022, around 102.8 MW of solar PV installations (of up to 5 MW each) were in operation. Another batch of grid-connected PV power plants totalling 176.7 MW are under construction, the largest being the Masrik solar PV station with 6255 MW of installed capacity in Gegharkunik Region.
@@ -230,8 +232,8 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
               <h3 class="wind-heading__subhead">Chapter 6<span>.</span></h3>
               <h1 class="wind-heading__head">Wind energy</h1>
             </div>
-            <div class="wind-info"  data-aos="fade-up">
-              <p class="wind-text">
+            <div class="wind-info">
+              <p class="wind-text"  data-aos="fade-up">
                 In 2003, the Wind Energy Resource Atlas of Armenia was formed. According to it, economically reasonable wind power potential is estimated at 450 MW total installed capacity and at electric power output of 1.26 billion kWh/y. The main promising locations are the Zod (Sotk) Pass, Bazum Range, Pushkin and Karakhach Passes, Jajur Pass, Geghama Range, Sevan Pass, Aparan Region, Sisian-Goris Hills and Meghri Area.
               </br></br>
                 In December 2005, for the first time in Armenia and in the Caucasus a grid-connected wind-power plant, Lori 1 Wind Farm, with capacity of 2.64 MW was launched at Pushkin Pass, located along the Bazum Mountains. It was funded by Iran and built by the Iranian company Sunir. In the future an increase of the wind power plant capacity up to 90 MW is planned. 
@@ -268,8 +270,8 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
               <h3 class="hydro-heading__subhead">Chapter 7<span>.</span></h3>
               <h1 class="hydro-heading__head">Hydro energy</h1>
             </div>
-            <div class="hydro-info"  data-aos="fade-up">
-              <span class="hydro-text">
+            <div class="hydro-info">
+              <span class="hydro-text"  data-aos="fade-up">
                 Vorotan Cascade power generation complex, commissioned during 1970‑1989 and operated by the private company ContourGlobal Hydro Cascade CJSC, has an operating capacity of 404 MW (installed capacity is also 404 MW). Annual generation is approximately 1 000 GWh from three HPPs, covering 15% of domestic supply. HPP Cascade consists of Spandaryan (76 MW), Shamb (171 MW) and Tatev (157 MW) HPPs.
               </br></br>
                 Sevan-Hrazdan Cascade complex of hydroelectric plants privately owned and operated by International Energy Corporation CJSC with an 552 MW capacity (installed capacity is 561 MW). It was commissioned during 1940‑1962, and annual generation is approximately 450 GWh, or 6% of domestic supply. Sevan-Hrazdan HPPs Cascade includes 7 HPPs: Sevan's (34 MW), Hrazdan's (81 MW), Argel's (224 MW), Arzni's (70 MW), Kanaker’s (102 MW), Yerevan-1 (44 MW) and Yerevan-3 (5 MW) HPPs.
@@ -308,7 +310,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
       </main>
       <footer class="footer">
         <div class="footer-container">
-          <div class="footer-author">
+          <div class="footer-author"  data-aos="fade-right">
             The project was worked on by
             <h3 class="footer-author__head">Tolegen Akynzhanov</h3>
             <p class="footer-author__desc">data collection, text editor, data engineering</p>
@@ -317,7 +319,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
             <h3 class="footer-author__head">Alikhan Beisenbayev</h3>
             <p class="footer-author__desc">developer, web map creator, web design</p>
           </div>
-          <div class="footer-source">
+          <div class="footer-source"  data-aos="fade-left">
             Sources
             <ol class="footer-source__list">
               <li>1. <a href="https://iea.blob.core.windows.net/assets/55834e18-f66e-4642-aed2-7ebff9c54c2c/ArmeniaEnergyProfile.pdf">Armenia Energy Profile</a></li>
