--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
           <div class="footer-author"  data-aos="fade-right">
             The project was worked on by
             <h3 class="footer-author__head">Tolegen Akynzhanov</h3>
-            <p class="footer-author__desc">data collection, text editor, data engineering</p>
+            <p class="footer-author__desc">data collection, text editor, data preprocessing</p>
             <h3 class="footer-author__head">Artem Kushlevich</h3>
             <p class="footer-author__desc">infographic editor, text editor, map design</p>
             <h3 class="footer-author__head">Alikhan Beisenbayev</h3>
-            <p class="footer-author__desc">developer, web map creator, web design</p>
+            <p class="footer-author__desc">developer, web map creator, web design, data preprocessing</p>
           </div>
           <div class="footer-source"  data-aos="fade-left">
             Sources
