transition bg changed

--- a/index.html
+++ b/index.html
@@ -193,7 +193,15 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
         </div>
 
         <div class="transition-bg">
-          <!-- <img src="./assets/img/ren-bg.png" alt="" srcset=""> -->
+          <div class="transition-container">
+            <h3 class="transition-bg__text">
+              <span class="text-wrapper">
+                <span class="letters">
+                  Renewable energy in Armenia
+                </span>
+              </span>
+            </h3>
+          </div>
         </div>
 
         <div class="main-container">
@@ -339,6 +347,7 @@ Forming the foundation of Armenia’s renewable energy system as of 2022 were 18
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-core.min.js"></script>
     <script src="https://cdn.anychart.com/releases/8.11.0/js/anychart-treemap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script type="module" src="./js/main.js"></script>
     <script type="module" src="./js/map.js"></script>
   </body>
