--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
           </section>
 
           <div class="divider__text"  data-aos="fade-up">
-            <p class="divider__dg">312</p> 
-            <p class="divider__fact">renewable energy power in Armenia</p>
+            <p class="divider__dg">7.7</p> 
+            <p class="divider__fact">TWh produced of electricity in Armenia as of 2021</p>
           </div>
 
           <section class="issue">
